--- a/src/nb3_lagrangian.ipynb
+++ b/src/nb3_lagrangian.ipynb
@@ -39,7 +39,7 @@
      "text": [
       "python     : 3.10.10 (main, Mar  5 2023, 22:26:53) [GCC 12.2.1 20230201]\n",
       "sympy      : 1.9\n",
-      "SplitOct   : 0.11\n",
+      "SplitOct   : 0.12\n",
       "\n",
       "Selected Jupyter core packages...\n",
       "IPython          : 8.11.0\n",
@@ -85,7 +85,11 @@
    "outputs": [],
    "source": [
     "dispmath = lambda x: display(displayMath(x))\n",
-    "tex = syp.latex\n",
+    "def tex(inputobj):\n",
+    "    if type(inputobj) == SplitOctonion:\n",
+    "        return inputobj.__repr__()\n",
+    "    else:\n",
+    "        return syp.latex(inputobj)\n",
     "i = syp.I\n",
     "\n",
     "def prod(x):\n",
@@ -157,9 +161,9 @@
     "dee = syp.Rational(1/2)*SplitOctonion(dee_sym)\n",
     "# dee = (oI*dee*oI)\n",
     "\n",
-    "dispmath(r'\\psi=' + ψ.__repr__())\n",
-    "dispmath(r'\\partial=\\frac{1}{2}\\left(' + (2*dee).__repr__() + r'\\right)')\n",
-    "dispmath(r'\\eta=' + η.__repr__())"
+    "dispmath(r'\\psi=' + tex(ψ))\n",
+    "dispmath(r'\\partial=\\frac{1}{2}\\left(' + tex(2*dee) + r'\\right)')\n",
+    "dispmath(r'\\eta=' + tex(η))"
    ]
   },
   {
@@ -301,7 +305,7 @@
    "source": [
     "splitoct_eq = (dee - syp.Rational(1,2)*J3*dee_sym[7])*ψ\n",
     "eq_components = (2*splitoct_eq).x\n",
-    "dispmath( r'\\begin{aligned}(\\partial - \\frac{1}{2}J_3 \\partial_7) \\psi=&\\frac{1}{2}\\left(' + (2*splitoct_eq).__repr__()\n",
+    "dispmath( r'\\begin{aligned}(\\partial - \\frac{1}{2}J_3 \\partial_7) \\psi=&\\frac{1}{2}\\left(' + tex(2*splitoct_eq)\n",
     "         + r'\\right)\\\\= &\\quad 0\\end{aligned}')\n",
     "print()\n",
     "dispmath(r'\\text{Component-wise these equations are:}')\n",
@@ -645,14 +649,6 @@
     "else:\n",
     "    dispmath(r'''\\text{Stationarizing the action does not result in: } \\left(\\partial - \\frac{1}{2} J_3 \\partial_7 \\right) \\psi = 0''')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "21e99d21-4d5c-475c-a47d-0f67bc2cf16b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
