--- a/src/nb2_dirac.ipynb
+++ b/src/nb2_dirac.ipynb
@@ -12,7 +12,7 @@
      "text": [
       "python     : 3.10.10 (main, Mar  5 2023, 22:26:53) [GCC 12.2.1 20230201]\n",
       "sympy      : 1.9\n",
-      "SplitOct   : 0.11\n",
+      "SplitOct   : 0.12\n",
       "\n",
       "Selected Jupyter core packages...\n",
       "IPython          : 8.11.0\n",
@@ -56,7 +56,11 @@
    "source": [
     "# useful functions and shortcuts\n",
     "dispmath = lambda x: display(displayMath(x))\n",
-    "tex = syp.latex\n",
+    "def tex(inputobj):\n",
+    "    if type(inputobj) == SplitOctonion:\n",
+    "        return inputobj.__repr__()\n",
+    "    else:\n",
+    "        return syp.latex(inputobj)\n",
     "i = syp.I\n",
     "def sypHermConj(x):\n",
     "    return syp.transpose(syp.conjugate(x))"
@@ -996,22 +1000,6 @@
     "dispmath(r'''\\text{Difference between } \\mathcal{L} = -\\left\\langle \\psi,J_{3}\\left(\\left(\\nabla-mJ_{3}\\right)\\psi\\right)\\right\\rangle\n",
     "\\text{ and } \\mathcal{L} = \\left\\langle J_{3}\\psi,\\left(\\nabla-mJ_{3}\\right)\\psi\\right\\rangle \\text{ is: }''' + tex(L_oct - L_oct2))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f0fb7157-da93-42a3-b175-2b49b85a94f1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "94f02e0e-21fb-4006-9ec6-7eff12706f2a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
