--- a/src/nb0_splitoct_identities.ipynb
+++ b/src/nb0_splitoct_identities.ipynb
@@ -22,21 +22,21 @@
      "text": [
       "python     : 3.10.10 (main, Mar  5 2023, 22:26:53) [GCC 12.2.1 20230201]\n",
       "sympy      : 1.9\n",
-      "SplitOct   : 0.12\n",
+      "SplitOct   : 0.13\n",
       "numpy      : 1.24.2\n",
       "\n",
       "Selected Jupyter core packages...\n",
-      "IPython          : 8.11.0\n",
-      "ipykernel        : 6.21.3\n",
-      "ipywidgets       : 8.0.4\n",
-      "jupyter_client   : 8.0.3\n",
-      "jupyter_core     : 5.2.0\n",
-      "jupyter_server   : 2.4.0\n",
-      "jupyterlab       : 3.6.1\n",
-      "nbclient         : 0.7.2\n",
-      "nbconvert        : 7.2.10\n",
-      "nbformat         : 5.7.3\n",
-      "notebook         : 6.5.3\n",
+      "IPython          : 8.12.0\n",
+      "ipykernel        : 6.22.0\n",
+      "ipywidgets       : 8.0.6\n",
+      "jupyter_client   : 8.1.0\n",
+      "jupyter_core     : 5.3.0\n",
+      "jupyter_server   : 2.5.0\n",
+      "jupyterlab       : 3.6.3\n",
+      "nbclient         : 0.7.3\n",
+      "nbconvert        : 7.3.1\n",
+      "nbformat         : 5.8.0\n",
+      "notebook         : 6.5.4\n",
       "qtconsole        : not installed\n",
       "traitlets        : 5.9.0\n"
      ]
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "5231aae6-eb03-4bbf-9c49-de9260f37da2",
    "metadata": {
     "tags": []
@@ -87,7 +87,7 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\text{Split octonion algebra basis unit multiplication table}$"
+       "$\\displaystyle \\text{Split octonion algebra basis unit multiplication table:}$"
       ],
       "text/plain": [
        "<IPython.core.display.Math object>"
@@ -110,7 +110,7 @@
     }
    ],
    "source": [
-    "dispmath(r'\\text{Split octonion algebra basis unit multiplication table}')\n",
+    "dispmath(r'\\text{Split octonion algebra basis unit multiplication table:}')\n",
     "table = r'\\begin{array}{c|cccccccc}'\n",
     "for unit_2 in ounit:\n",
     "    table += r' & ' + tex(unit_2)\n",
@@ -126,10 +126,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "1b1729ae-4970-48b5-a0b4-83929d146755",
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\text{Definitions and notation:}$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/latex": [
@@ -218,6 +230,7 @@
     "y = SplitOctonion(y_sym)\n",
     "z = SplitOctonion(z_sym)\n",
     "\n",
+    "dispmath(r'\\text{Definitions and notation:}')\n",
     "dispmath(r'x,y,z\\in\\mathbb{O}^{\\prime}')\n",
     "\n",
     "dispmath( r'x = ' + tex(x) )\n",
@@ -230,7 +243,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
+   "id": "4ee7cc12-e644-457e-a6ab-3d9779276e49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#dispmath(r'\\begin{aligned}\\mathcal{Q}(x) =& \\thinspace \\overline{x} x \\\\ =& \\thinspace ' + tex(Q(x)) + '\\end{aligned}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "9ab4be36-a826-487d-8e46-08fc4453cffb",
    "metadata": {
     "tags": []
@@ -254,21 +277,25 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "b6fcd325-416a-48e4-a622-801a79d4778f",
-   "metadata": {},
-   "source": [
-    "Map $\\mathcal{Q}:\\mathbb{O}^{\\prime} \\rightarrow \\mathbb{R}$ is a diagonal quadratic form"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "d8323e3d-ba3f-4bd0-a7db-4008efd9d61a",
    "metadata": {
     "tags": []
    },
    "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\text{Map } \\mathcal{Q}:\\mathbb{O}^{\\prime} \\rightarrow \\mathbb{R} \\text{ is a diagonal quadratic form}$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/latex": [
@@ -286,12 +313,13 @@
     "def Q(x):\n",
     "    assert type(x) == SplitOctonion\n",
     "    return (x.conj()*x).real()\n",
+    "dispmath(r'\\text{Map } \\mathcal{Q}:\\mathbb{O}^{\\prime} \\rightarrow \\mathbb{R} \\text{ is a diagonal quadratic form}')\n",
     "dispmath(r'\\begin{aligned}\\mathcal{Q}(x) =& \\thinspace \\overline{x} x \\\\ =& \\thinspace ' + tex(Q(x)) + '\\end{aligned}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "55e0291d-d502-4822-a8fe-450e93c8a25d",
    "metadata": {
     "tags": []
@@ -454,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "c9df0c33-ef20-4a77-9d36-beff0917c50a",
    "metadata": {
     "tags": []
@@ -496,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "a8d54007-d6e9-4921-b59e-f19fcd58b7c3",
    "metadata": {
     "tags": []
@@ -608,12 +636,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 38,
    "id": "7fbf59c8-f34d-4bab-aa29-d37ee3560bd7",
    "metadata": {
     "tags": []
    },
    "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\text{Definition of nondegenerate symmetric bilinear form in terms of quadratic form } \\mathcal{Q} \\text{:}$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/latex": [
@@ -625,24 +665,70 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\text{Identity involving the bilinear form:}$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left\\langle x,y \\right\\rangle = \\mathrm{Re}\\left(x \\overline{y}\\right)= \\frac{1}{2}\\left( x\\overline{y} + y\\overline{x} \\right)$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
+    "dispmath(r'\\text{Definition of nondegenerate symmetric bilinear form in terms of quadratic form } \\mathcal{Q} \\text{:}')\n",
     "bilinform = syp.simplify(syp.Rational(1,2) * ( Q(x + y) - Q(x) - Q(y) ))\n",
     "# is same as bilinform = x.dot(y)\n",
     "dispmath(r'\\begin{aligned} \\left\\langle x,y \\right\\rangle =& \\thinspace ' \n",
     "        + r' \\frac{1}{2} \\mathcal{Q}(x + y) - \\frac{1}{2}\\mathcal{Q}(x) - \\frac{1}{2}\\mathcal{Q}(y)\\\\'\n",
-    "        + r'=& \\thinspace '  +tex(bilinform) + r'\\end{aligned}')"
+    "        + r'=& \\thinspace '  +tex(bilinform) + r'\\end{aligned}')\n",
+    "\n",
+    "dispmath(r'\\text{Identity involving the bilinear form:}')\n",
+    "rexyconj = (x*y.conj()).real()\n",
+    "if bilinform == rexyconj:\n",
+    "    dispmath(r'\\left\\langle x,y \\right\\rangle = \\mathrm{Re}\\left(x \\overline{y}\\right)'\n",
+    "             +r'= \\frac{1}{2}\\left( x\\overline{y} + y\\overline{x} \\right)')\n",
+    "else:\n",
+    "    dispmath(r'\\left\\langle x,y \\right\\rangle \\neq \\mathrm{Re}\\left(x \\overline{y}\\right)'\n",
+    "             +r'= \\frac{1}{2}\\left( x\\overline{y} + y\\overline{x} \\right)')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 41,
    "id": "d47c6678-ade6-474b-aeb4-602157f3446d",
    "metadata": {
     "tags": []
    },
    "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\text{Identities involving real and imaginary split octonions:}$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/latex": [
@@ -681,6 +767,7 @@
     }
    ],
    "source": [
+    "dispmath(r'\\text{Identities involving real and imaginary split octonions:}')\n",
     "if (x.imag()*y.imag() + y.imag()*x.imag()) == - 2*x.imag().dot(y.imag()):\n",
     "    dispmath(r'\\mathbf{x}\\mathbf{y}+\\mathbf{y}\\mathbf{x}=-2\\mathrm{Re}\\left(\\mathbf{x}\\mathbf{y}\\right)=-2\\left\\langle \\mathbf{x},\\mathbf{y}\\right\\rangle  ')\n",
     "else:\n",
@@ -696,6 +783,14 @@
     "else:\n",
     "    dispmath(r'\\left\\langle xy,z\\right\\rangle +\\left\\langle y,xz\\right\\rangle \\neq2\\mathrm{Re}\\left(x\\right)\\left\\langle y,z\\right\\rangle ')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a961425-b3b4-4e5d-bf9e-0f157c031248",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
