--- a/src/nb0_splitoct_identities.ipynb
+++ b/src/nb0_splitoct_identities.ipynb
@@ -5,7 +5,12 @@
    "id": "107c64a0-c004-4803-884e-306efb0c6991",
    "metadata": {},
    "source": [
-    "In this notebook use of SplitOct.py is demonstrated and some split octonionic identities are proved."
+    "<span style=\"color:green\">\n",
+    "\n",
+    "> # Split octonionic identities\n",
+    "> In this notebook the use of SplitOct.py is demonstrated and some split octonionic identities are proved.\n",
+    "\n",
+    "</span>"
    ]
   },
   {
@@ -20,22 +25,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "python     : 3.10.10 (main, Mar  5 2023, 22:26:53) [GCC 12.2.1 20230201]\n",
-      "sympy      : 1.9\n",
-      "SplitOct   : 0.13\n",
-      "numpy      : 1.24.2\n",
+      "python     : 3.11.3 (main, Jun  5 2023, 09:32:32) [GCC 13.1.1 20230429]\n",
+      "sympy      : 1.12\n",
+      "SplitOct   : 0.15\n",
+      "numpy      : 1.24.3\n",
       "\n",
       "Selected Jupyter core packages...\n",
-      "IPython          : 8.12.0\n",
-      "ipykernel        : 6.22.0\n",
+      "IPython          : 8.14.0\n",
+      "ipykernel        : 6.23.3\n",
       "ipywidgets       : 8.0.6\n",
-      "jupyter_client   : 8.1.0\n",
-      "jupyter_core     : 5.3.0\n",
-      "jupyter_server   : 2.5.0\n",
-      "jupyterlab       : 3.6.3\n",
-      "nbclient         : 0.7.3\n",
-      "nbconvert        : 7.3.1\n",
-      "nbformat         : 5.8.0\n",
+      "jupyter_client   : 8.3.0\n",
+      "jupyter_core     : 5.3.1\n",
+      "jupyter_server   : 2.7.0\n",
+      "jupyterlab       : 4.0.2\n",
+      "nbclient         : 0.8.0\n",
+      "nbconvert        : 7.6.0\n",
+      "nbformat         : 5.9.0\n",
       "notebook         : 6.5.4\n",
       "qtconsole        : not installed\n",
       "traitlets        : 5.9.0\n"
@@ -78,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "5231aae6-eb03-4bbf-9c49-de9260f37da2",
    "metadata": {
     "tags": []
@@ -126,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "1b1729ae-4970-48b5-a0b4-83929d146755",
    "metadata": {},
    "outputs": [
@@ -243,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "4ee7cc12-e644-457e-a6ab-3d9779276e49",
    "metadata": {},
    "outputs": [],
@@ -253,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "9ab4be36-a826-487d-8e46-08fc4453cffb",
    "metadata": {
     "tags": []
@@ -278,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "d8323e3d-ba3f-4bd0-a7db-4008efd9d61a",
    "metadata": {
     "tags": []
@@ -319,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "55e0291d-d502-4822-a8fe-450e93c8a25d",
    "metadata": {
     "tags": []
@@ -482,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "c9df0c33-ef20-4a77-9d36-beff0917c50a",
    "metadata": {
     "tags": []
@@ -513,18 +518,22 @@
    "id": "c36a83af-544d-4b1f-ba42-f009e4986851",
    "metadata": {},
    "source": [
-    "# __________________________________________________________\n",
+    "<span style=\"color:green\">\n",
     "\n",
-    "Below we prove that\n",
+    "__________________________________________________________\n",
+    "\n",
+    "> Below we prove that\n",
     "\n",
     "\\begin{equation} \\mathrm{conj}_{u}(x) = u^2 \\left(u \\overline{x} u \\right) \\end{equation}\n",
     "\n",
-    "where $ u \\neq 1 $ is a basis unit."
+    ">where $ u \\neq 1 $ is a basis unit.\n",
+    "\n",
+    "</span>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "a8d54007-d6e9-4921-b59e-f19fcd58b7c3",
    "metadata": {
     "tags": []
@@ -636,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "id": "7fbf59c8-f34d-4bab-aa29-d37ee3560bd7",
    "metadata": {
     "tags": []
@@ -711,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "id": "d47c6678-ade6-474b-aeb4-602157f3446d",
    "metadata": {
     "tags": []
@@ -786,11 +795,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5a961425-b3b4-4e5d-bf9e-0f157c031248",
+   "execution_count": 13,
+   "id": "85b27ac8-4d79-493b-a22d-637b1e63d767",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\mathrm{footprint}:\\mathrm{basis} \\left( \\mathbb{O}^{\\prime} \\right) \\rightarrow \\mathbb{Z}$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle 1 \\mapsto 0$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle j_{1} \\mapsto 2$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle j_{2} \\mapsto 2$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle j_{3} \\mapsto 2$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle I \\mapsto -2$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle J_{1} \\mapsto -2$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle J_{2} \\mapsto -2$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle J_{3} \\mapsto -2$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# dispmath(' \\mathrm{footprint} \\mathrm{basis}\\left(\\mathbb{O}^{\\prime}\\right)\\rightarrow \\mathbb{Z} ')\n",
+    "dispmath(r'\\mathrm{footprint}:\\mathrm{basis} \\left( \\mathbb{O}^{\\prime} \\right) \\rightarrow \\mathbb{Z}')\n",
+    "for u in ounit:\n",
+    "    u_footprint = u * u.conj() - u * u\n",
+    "    dispmath(tex(u) + ' \\mapsto ' + tex(u_footprint))"
+   ]
   }
  ],
  "metadata": {
@@ -809,7 +933,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
