--- a/src/nb4_D_lagrangian_stationarization.ipynb
+++ b/src/nb4_D_lagrangian_stationarization.ipynb
@@ -5,20 +5,23 @@
    "id": "36254be9-7c94-411d-bade-3d63e0107278",
    "metadata": {},
    "source": [
-    "# Stationarizing split octonionic Lagrangian with $D$ operator\n",
+    "<span style=\"color:green\">\n",
+    "    \n",
+    "># Stationarizing split octonionic Lagrangian with $D$ operator\n",
     "\n",
-    "Here we demonstrate that\n",
+    ">Here we demonstrate that\n",
     "\n",
     "\\begin{equation} \\begin{array}{ccc}\n",
     "\\mathcal{L}=\\frac{1}{2}\\left\\langle J_{3}\\psi,D\\psi\\right\\rangle  & \\overset{\\delta\\int\\mathcal{L}}{\\longrightarrow} & \\left(D+J_{3}\\partial_{7}\\right)\\psi=0\\end{array} \\end{equation}\n",
     "\n",
-    "where $\\delta \\int \\mathcal{L}$ stands for stationarization procedure of corresponding action and\n",
+    ">where $\\delta \\int \\mathcal{L}$ stands for stationarization procedure of corresponding action and\n",
     "\n",
     "\\begin{equation} \\begin{aligned}D & = 2 I\\partial I\\\\\n",
     " & =\\partial_{0}+I\\partial_{4}-\\sum_{n=1}^{3}\\left(j_{n}\\partial_{n}+J_{n}\\partial_{4+n}\\right)\n",
     "\\end{aligned}\n",
     " \\end{equation}\n",
-    "\n"
+    "\n",
+    "</span>"
    ]
   },
   {
@@ -33,22 +36,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "python     : 3.10.10 (main, Mar  5 2023, 22:26:53) [GCC 12.2.1 20230201]\n",
-      "sympy      : 1.9\n",
-      "SplitOct   : 0.12\n",
+      "python     : 3.11.3 (main, Jun  5 2023, 09:32:32) [GCC 13.1.1 20230429]\n",
+      "sympy      : 1.12\n",
+      "SplitOct   : 0.15\n",
       "\n",
       "Selected Jupyter core packages...\n",
-      "IPython          : 8.12.0\n",
-      "ipykernel        : 6.22.0\n",
-      "ipywidgets       : 8.0.6\n",
-      "jupyter_client   : 8.1.0\n",
-      "jupyter_core     : 5.3.0\n",
-      "jupyter_server   : 2.5.0\n",
-      "jupyterlab       : 3.6.3\n",
-      "nbclient         : 0.7.3\n",
-      "nbconvert        : 7.3.1\n",
-      "nbformat         : 5.8.0\n",
-      "notebook         : 6.5.4\n",
+      "IPython          : 8.14.0\n",
+      "ipykernel        : 6.25.0\n",
+      "ipywidgets       : 8.1.0\n",
+      "jupyter_client   : 8.3.0\n",
+      "jupyter_core     : 5.3.1\n",
+      "jupyter_server   : 2.7.0\n",
+      "jupyterlab       : 4.0.4\n",
+      "nbclient         : 0.8.0\n",
+      "nbconvert        : 7.7.3\n",
+      "nbformat         : 5.9.2\n",
+      "notebook         : 7.0.2\n",
       "qtconsole        : not installed\n",
       "traitlets        : 5.9.0\n"
      ]
@@ -80,13 +83,13 @@
    },
    "outputs": [],
    "source": [
+    "# useful functions and shortcuts\n",
     "dispmath = lambda x: display(displayMath(x))\n",
     "def tex(inputobj):\n",
     "    if type(inputobj) == SplitOctonion:\n",
     "        return inputobj.__repr__()\n",
     "    else:\n",
     "        return syp.latex(inputobj)\n",
-    "i = syp.I\n",
     "\n",
     "def prod(x):\n",
     "    y = 1\n",
@@ -187,7 +190,7 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\begin{aligned}(D + J_3 \\partial_7) \\psi =& \\partial_{0} \\psi_{0} + \\partial_{1} \\psi_{1} + \\partial_{2} \\psi_{2} + \\partial_{3} \\psi_{3} + \\partial_{4} \\psi_{4} - \\partial_{5} \\psi_{5} - \\partial_{6} \\psi_{6} + j_{1} \\left(\\partial_{0} \\psi_{1} - \\partial_{1} \\psi_{0} - \\partial_{2} \\psi_{3} + \\partial_{3} \\psi_{2} - \\partial_{4} \\psi_{5} - \\partial_{5} \\psi_{4} - \\partial_{6} \\psi_{7}\\right) + j_{2} \\left(\\partial_{0} \\psi_{2} + \\partial_{1} \\psi_{3} - \\partial_{2} \\psi_{0} - \\partial_{3} \\psi_{1} - \\partial_{4} \\psi_{6} + \\partial_{5} \\psi_{7} - \\partial_{6} \\psi_{4}\\right) + j_{3} \\left(\\partial_{0} \\psi_{3} - \\partial_{1} \\psi_{2} + \\partial_{2} \\psi_{1} - \\partial_{3} \\psi_{0} - \\partial_{4} \\psi_{7} - \\partial_{5} \\psi_{6} + \\partial_{6} \\psi_{5}\\right) + I \\left(\\partial_{0} \\psi_{4} + \\partial_{1} \\psi_{5} + \\partial_{2} \\psi_{6} + \\partial_{3} \\psi_{7} + \\partial_{4} \\psi_{0} - \\partial_{5} \\psi_{1} - \\partial_{6} \\psi_{2}\\right) + J_{1} \\left(\\partial_{0} \\psi_{5} - \\partial_{1} \\psi_{4} + \\partial_{2} \\psi_{7} - \\partial_{3} \\psi_{6} - \\partial_{4} \\psi_{1} - \\partial_{5} \\psi_{0} + \\partial_{6} \\psi_{3}\\right) + J_{2} \\left(\\partial_{0} \\psi_{6} - \\partial_{1} \\psi_{7} - \\partial_{2} \\psi_{4} + \\partial_{3} \\psi_{5} - \\partial_{4} \\psi_{2} - \\partial_{5} \\psi_{3} - \\partial_{6} \\psi_{0}\\right) + J_{3} \\left(\\partial_{0} \\psi_{7} + \\partial_{1} \\psi_{6} - \\partial_{2} \\psi_{5} - \\partial_{3} \\psi_{4} - \\partial_{4} \\psi_{3} + \\partial_{5} \\psi_{2} - \\partial_{6} \\psi_{1}\\right) \\\\= &\\quad 0\\end{aligned}$"
+       "$\\displaystyle \\begin{aligned}(D + J_3 \\partial_7) \\psi &= \\partial_{0} \\psi_{0} + \\partial_{1} \\psi_{1} + \\partial_{2} \\psi_{2} + \\partial_{3} \\psi_{3} + \\partial_{4} \\psi_{4} - \\partial_{5} \\psi_{5} - \\partial_{6} \\psi_{6} + j_{1} \\left(\\partial_{0} \\psi_{1} - \\partial_{1} \\psi_{0} - \\partial_{2} \\psi_{3} + \\partial_{3} \\psi_{2} - \\partial_{4} \\psi_{5} - \\partial_{5} \\psi_{4} - \\partial_{6} \\psi_{7}\\right) + j_{2} \\left(\\partial_{0} \\psi_{2} + \\partial_{1} \\psi_{3} - \\partial_{2} \\psi_{0} - \\partial_{3} \\psi_{1} - \\partial_{4} \\psi_{6} + \\partial_{5} \\psi_{7} - \\partial_{6} \\psi_{4}\\right) + j_{3} \\left(\\partial_{0} \\psi_{3} - \\partial_{1} \\psi_{2} + \\partial_{2} \\psi_{1} - \\partial_{3} \\psi_{0} - \\partial_{4} \\psi_{7} - \\partial_{5} \\psi_{6} + \\partial_{6} \\psi_{5}\\right) + I \\left(\\partial_{0} \\psi_{4} + \\partial_{1} \\psi_{5} + \\partial_{2} \\psi_{6} + \\partial_{3} \\psi_{7} + \\partial_{4} \\psi_{0} - \\partial_{5} \\psi_{1} - \\partial_{6} \\psi_{2}\\right) + J_{1} \\left(\\partial_{0} \\psi_{5} - \\partial_{1} \\psi_{4} + \\partial_{2} \\psi_{7} - \\partial_{3} \\psi_{6} - \\partial_{4} \\psi_{1} - \\partial_{5} \\psi_{0} + \\partial_{6} \\psi_{3}\\right) + J_{2} \\left(\\partial_{0} \\psi_{6} - \\partial_{1} \\psi_{7} - \\partial_{2} \\psi_{4} + \\partial_{3} \\psi_{5} - \\partial_{4} \\psi_{2} - \\partial_{5} \\psi_{3} - \\partial_{6} \\psi_{0}\\right) + J_{3} \\left(\\partial_{0} \\psi_{7} + \\partial_{1} \\psi_{6} - \\partial_{2} \\psi_{5} - \\partial_{3} \\psi_{4} - \\partial_{4} \\psi_{3} + \\partial_{5} \\psi_{2} - \\partial_{6} \\psi_{1}\\right) \\\\&= 0\\end{aligned}$"
       ],
       "text/plain": [
        "<IPython.core.display.Math object>"
@@ -315,8 +318,8 @@
    "source": [
     "splitoct_eq = (D + J3*dee_sym[7])*ψ\n",
     "eq_components = splitoct_eq.x\n",
-    "dispmath( r'\\begin{aligned}(D + J_3 \\partial_7) \\psi =& ' + tex(splitoct_eq)\n",
-    "         + r' \\\\= &\\quad 0\\end{aligned}')\n",
+    "dispmath( r'\\begin{aligned}(D + J_3 \\partial_7) \\psi &= ' + tex(splitoct_eq)\n",
+    "         + r' \\\\&= 0\\end{aligned}')\n",
     "print()\n",
     "dispmath(r'\\text{Component-wise these equations are:}')\n",
     "for entry in eq_components:\n",
@@ -334,7 +337,7 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\begin{aligned}\\mathcal{L}=&\\thinspace\\frac{1}{2}\\left\\langle J_3\\psi, D \\psi \\right\\rangle\\\\=&\\thinspace \\frac{1}{2}(- \\psi_{0} \\partial_{0} \\psi_{7} - \\psi_{0} \\partial_{1} \\psi_{6} + \\psi_{0} \\partial_{2} \\psi_{5} + \\psi_{0} \\partial_{3} \\psi_{4} + \\psi_{0} \\partial_{4} \\psi_{3} - \\psi_{0} \\partial_{5} \\psi_{2} + \\psi_{0} \\partial_{6} \\psi_{1} + \\psi_{0} \\partial_{7} \\psi_{0} + \\psi_{1} \\partial_{0} \\psi_{6} - \\psi_{1} \\partial_{1} \\psi_{7} - \\psi_{1} \\partial_{2} \\psi_{4} + \\psi_{1} \\partial_{3} \\psi_{5} - \\psi_{1} \\partial_{4} \\psi_{2} - \\psi_{1} \\partial_{5} \\psi_{3} - \\psi_{1} \\partial_{6} \\psi_{0} + \\psi_{1} \\partial_{7} \\psi_{1} - \\psi_{2} \\partial_{0} \\psi_{5} + \\psi_{2} \\partial_{1} \\psi_{4} - \\psi_{2} \\partial_{2} \\psi_{7} + \\psi_{2} \\partial_{3} \\psi_{6} + \\psi_{2} \\partial_{4} \\psi_{1} + \\psi_{2} \\partial_{5} \\psi_{0} - \\psi_{2} \\partial_{6} \\psi_{3} + \\psi_{2} \\partial_{7} \\psi_{2} - \\psi_{3} \\partial_{0} \\psi_{4} - \\psi_{3} \\partial_{1} \\psi_{5} - \\psi_{3} \\partial_{2} \\psi_{6} - \\psi_{3} \\partial_{3} \\psi_{7} - \\psi_{3} \\partial_{4} \\psi_{0} + \\psi_{3} \\partial_{5} \\psi_{1} + \\psi_{3} \\partial_{6} \\psi_{2} + \\psi_{3} \\partial_{7} \\psi_{3} + \\psi_{4} \\partial_{0} \\psi_{3} - \\psi_{4} \\partial_{1} \\psi_{2} + \\psi_{4} \\partial_{2} \\psi_{1} - \\psi_{4} \\partial_{3} \\psi_{0} - \\psi_{4} \\partial_{4} \\psi_{7} - \\psi_{4} \\partial_{5} \\psi_{6} + \\psi_{4} \\partial_{6} \\psi_{5} - \\psi_{4} \\partial_{7} \\psi_{4} + \\psi_{5} \\partial_{0} \\psi_{2} + \\psi_{5} \\partial_{1} \\psi_{3} - \\psi_{5} \\partial_{2} \\psi_{0} - \\psi_{5} \\partial_{3} \\psi_{1} - \\psi_{5} \\partial_{4} \\psi_{6} + \\psi_{5} \\partial_{5} \\psi_{7} - \\psi_{5} \\partial_{6} \\psi_{4} - \\psi_{5} \\partial_{7} \\psi_{5} - \\psi_{6} \\partial_{0} \\psi_{1} + \\psi_{6} \\partial_{1} \\psi_{0} + \\psi_{6} \\partial_{2} \\psi_{3} - \\psi_{6} \\partial_{3} \\psi_{2} + \\psi_{6} \\partial_{4} \\psi_{5} + \\psi_{6} \\partial_{5} \\psi_{4} + \\psi_{6} \\partial_{6} \\psi_{7} - \\psi_{6} \\partial_{7} \\psi_{6} + \\psi_{7} \\partial_{0} \\psi_{0} + \\psi_{7} \\partial_{1} \\psi_{1} + \\psi_{7} \\partial_{2} \\psi_{2} + \\psi_{7} \\partial_{3} \\psi_{3} + \\psi_{7} \\partial_{4} \\psi_{4} - \\psi_{7} \\partial_{5} \\psi_{5} - \\psi_{7} \\partial_{6} \\psi_{6} - \\psi_{7} \\partial_{7} \\psi_{7} ) \\end{aligned}$"
+       "$\\displaystyle \\begin{aligned}\\mathcal{L}&=\\thinspace\\frac{1}{2}\\left\\langle J_3\\psi, D \\psi \\right\\rangle\\\\&=\\thinspace \\frac{1}{2}(- \\psi_{0} \\partial_{0} \\psi_{7} - \\psi_{0} \\partial_{1} \\psi_{6} + \\psi_{0} \\partial_{2} \\psi_{5} + \\psi_{0} \\partial_{3} \\psi_{4} + \\psi_{0} \\partial_{4} \\psi_{3} - \\psi_{0} \\partial_{5} \\psi_{2} + \\psi_{0} \\partial_{6} \\psi_{1} + \\psi_{0} \\partial_{7} \\psi_{0} + \\psi_{1} \\partial_{0} \\psi_{6} - \\psi_{1} \\partial_{1} \\psi_{7} - \\psi_{1} \\partial_{2} \\psi_{4} + \\psi_{1} \\partial_{3} \\psi_{5} - \\psi_{1} \\partial_{4} \\psi_{2} - \\psi_{1} \\partial_{5} \\psi_{3} - \\psi_{1} \\partial_{6} \\psi_{0} + \\psi_{1} \\partial_{7} \\psi_{1} - \\psi_{2} \\partial_{0} \\psi_{5} + \\psi_{2} \\partial_{1} \\psi_{4} - \\psi_{2} \\partial_{2} \\psi_{7} + \\psi_{2} \\partial_{3} \\psi_{6} + \\psi_{2} \\partial_{4} \\psi_{1} + \\psi_{2} \\partial_{5} \\psi_{0} - \\psi_{2} \\partial_{6} \\psi_{3} + \\psi_{2} \\partial_{7} \\psi_{2} - \\psi_{3} \\partial_{0} \\psi_{4} - \\psi_{3} \\partial_{1} \\psi_{5} - \\psi_{3} \\partial_{2} \\psi_{6} - \\psi_{3} \\partial_{3} \\psi_{7} - \\psi_{3} \\partial_{4} \\psi_{0} + \\psi_{3} \\partial_{5} \\psi_{1} + \\psi_{3} \\partial_{6} \\psi_{2} + \\psi_{3} \\partial_{7} \\psi_{3} + \\psi_{4} \\partial_{0} \\psi_{3} - \\psi_{4} \\partial_{1} \\psi_{2} + \\psi_{4} \\partial_{2} \\psi_{1} - \\psi_{4} \\partial_{3} \\psi_{0} - \\psi_{4} \\partial_{4} \\psi_{7} - \\psi_{4} \\partial_{5} \\psi_{6} + \\psi_{4} \\partial_{6} \\psi_{5} - \\psi_{4} \\partial_{7} \\psi_{4} + \\psi_{5} \\partial_{0} \\psi_{2} + \\psi_{5} \\partial_{1} \\psi_{3} - \\psi_{5} \\partial_{2} \\psi_{0} - \\psi_{5} \\partial_{3} \\psi_{1} - \\psi_{5} \\partial_{4} \\psi_{6} + \\psi_{5} \\partial_{5} \\psi_{7} - \\psi_{5} \\partial_{6} \\psi_{4} - \\psi_{5} \\partial_{7} \\psi_{5} - \\psi_{6} \\partial_{0} \\psi_{1} + \\psi_{6} \\partial_{1} \\psi_{0} + \\psi_{6} \\partial_{2} \\psi_{3} - \\psi_{6} \\partial_{3} \\psi_{2} + \\psi_{6} \\partial_{4} \\psi_{5} + \\psi_{6} \\partial_{5} \\psi_{4} + \\psi_{6} \\partial_{6} \\psi_{7} - \\psi_{6} \\partial_{7} \\psi_{6} + \\psi_{7} \\partial_{0} \\psi_{0} + \\psi_{7} \\partial_{1} \\psi_{1} + \\psi_{7} \\partial_{2} \\psi_{2} + \\psi_{7} \\partial_{3} \\psi_{3} + \\psi_{7} \\partial_{4} \\psi_{4} - \\psi_{7} \\partial_{5} \\psi_{5} - \\psi_{7} \\partial_{6} \\psi_{6} - \\psi_{7} \\partial_{7} \\psi_{7} ) \\end{aligned}$"
       ],
       "text/plain": [
        "<IPython.core.display.Math object>"
@@ -354,7 +357,7 @@
    ],
    "source": [
     "L = syp.Rational(1,2)*syp.expand( (J3*ψ).dot( D * ψ ) )\n",
-    "dispmath(r'\\begin{aligned}\\mathcal{L}=&\\thinspace\\frac{1}{2}\\left\\langle J_3\\psi, D \\psi \\right\\rangle\\\\=&\\thinspace \\frac{1}{2}('\n",
+    "dispmath(r'\\begin{aligned}\\mathcal{L}&=\\thinspace\\frac{1}{2}\\left\\langle J_3\\psi, D \\psi \\right\\rangle\\\\&=\\thinspace \\frac{1}{2}('\n",
     "         + tex(syp.simplify(syp.expand(2*L))) + ' ) \\end{aligned}')\n",
     "print()\n",
     "print('number of terms:', len((2*L).args))"
@@ -365,18 +368,21 @@
    "id": "07a676ee-5e4d-4098-b58d-64fc95be7339",
    "metadata": {},
    "source": [
-    "## Applying principle of stationary action to the Lagrangian\n",
+    "<span style=\"color:green\">\n",
+    "\n",
+    ">## Applying principle of stationary action to the Lagrangian\n",
     "\n",
     "\\begin{equation} S\\left[\\psi\\right] = \\int_{\\Omega} d^8x \\mathcal{L} \\end{equation}\n",
     "\n",
-    "where $\\Omega\\subset\\mathbb{O}^\\prime$.\n",
-    "\n",
-    "Action is startionarized by requirng that $ \\delta S\\left[\\psi\\right] = 0 $ where\n",
+    ">where $\\Omega\\subset\\mathbb{O}^\\prime$. Action is startionarized by requirng that $ \\delta S\\left[\\psi\\right] = 0 $ where\n",
     "\n",
     "\\begin{equation} \\delta S\\left[\\psi\\right] = \\lim_{\\varepsilon\\rightarrow 0} \\frac{d}{d\\varepsilon}S\\left[\\psi_{\\varepsilon}\\right] \\end{equation}\n",
     "\\begin{equation} \\psi_\\varepsilon = \\psi + \\varepsilon \\eta \\end{equation}\n",
-    "and\n",
-    "\\begin{equation} \\eta\\left(\\Omega\\right) = 0 \\thinspace.  \\end{equation}"
+    ">and\n",
+    "\n",
+    "\\begin{equation} \\eta\\left(\\Omega\\right) = 0 \\thinspace.  \\end{equation}\n",
+    "\n",
+    "</span>"
    ]
   },
   {
@@ -432,14 +438,18 @@
    "id": "b64cd3fc-12c1-468f-8d42-3c729993fded",
    "metadata": {},
    "source": [
-    "Here we use the fact that terms invloving derivative of $\\eta$ can be replaced using integratoin by parts and $\\eta{\\Omega}=0$ condition\n",
+    "<span style=\"color:green\">\n",
+    "\n",
+    ">Here we use the fact that terms invloving derivative of $\\eta$ can be replaced using integratoin by parts and $\\eta{\\Omega}=0$ condition\n",
     "\n",
     "\\begin{equation} \\begin{aligned}\\int_{\\Omega}dx^{8}\\psi_{\\mu}\\partial_{\\nu}\\eta_{\\sigma} & =\\int_{\\Omega_{\\neq\\nu}}d^{7}x\\int_{\\Omega_{\\nu}}dx_{\\nu}\\psi_{\\mu}\\partial_{\\nu}\\eta_{\\sigma}\\\\\n",
     " & =\\int_{\\Omega_{\\neq\\nu}}d^{7}x\\left(\\left.\\eta_{\\sigma}\\psi_{\\mu}\\right|_{\\Omega_{\\nu}}-\\int_{\\Omega_{\\nu}}dx_{\\nu}\\eta_{\\sigma}\\partial_{\\nu}\\psi_{\\mu}\\right)\\\\\n",
     " & =-\\int_{\\Omega_{\\neq\\nu}}d^{7}x\\int_{\\Omega_{\\nu}}dx_{\\nu}\\eta_{\\sigma}\\partial_{\\nu}\\psi_{\\mu}\\\\\n",
     " & =-\\int_{\\Omega}dx^{8}\\eta_{\\sigma}\\partial_{\\nu}\\psi_{\\mu}\n",
     "\\end{aligned}\n",
-    "\\end{equation}"
+    "\\end{equation}\n",
+    "\n",
+    "</span>"
    ]
   },
   {
@@ -497,7 +507,11 @@
    "id": "a6a70371-a9c9-447c-9999-d566743548cb",
    "metadata": {},
    "source": [
-    "Since $ \\delta S\\left[\\psi\\right]=0 $ for any $\\eta$ we can collect terms in $\\eta_{\\mu}$ and equate their coefficients to zero to obtain equation of motion."
+    "<span style=\"color:green\">\n",
+    "\n",
+    "Since $ \\delta S\\left[\\psi\\right]=0 $ for any $\\eta$ we can collect terms in $\\eta_{\\mu}$ and equate their coefficients to zero to obtain equation of motion.\n",
+    "\n",
+    "</span>"
    ]
   },
   {
@@ -628,7 +642,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[7, -6, 5, 4, -3, -2, 1, 0]\n",
+      "[0, -1, 2, 3, -4, -5, 6, -7]\n",
       "\n"
      ]
     },
@@ -647,15 +661,13 @@
    ],
    "source": [
     "def compare(vec_1, vec_2):\n",
-    "    idxs = list(range(8))\n",
     "    output = []\n",
     "    for m, comp_1 in enumerate(vec_1):\n",
     "        for n, comp_2 in enumerate(vec_2):\n",
-    "            if n in idxs:\n",
-    "                if comp_1 - comp_2 == 0:\n",
-    "                    output.append(n)\n",
-    "                elif comp_1 + comp_2 == 0:\n",
-    "                    output.append(-n)\n",
+    "            if syp.simplify(comp_1 - comp_2) == 0:\n",
+    "                output.append(m)\n",
+    "            elif syp.simplify(comp_1 + comp_2) == 0:\n",
+    "                output.append(-m)\n",
     "    return output\n",
     "\n",
     "comparison = compare(eq_components, collected)\n",
@@ -666,14 +678,6 @@
     "else:\n",
     "    dispmath(r'''\\text{Stationarizing the action does not result in: } \\left(\\mathscr{D} + J_3 \\partial_7 \\right) \\psi = 0''')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4ececdd8-210b-4d1f-bd14-ec9f1b517681",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -692,7 +696,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
